--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -186,8 +186,8 @@ This is the class webpage for Probability Theory I
 <b>Office:</b> Applied Statistics Unit (ASU) Room 914 (S N Bose Bhavan 9th floor)</li>
 
 <li>
-<b>Office hour (time slot for students to meet me in my office):</b> Friday 5pm to 6pm. Sorr, but you
- are not encouraged to visit my office at other times.</li>
+<b>Office hour (time slot for students to meet me in my office):</b> Friday 5pm to 6pm. Sorry, but you
+ are not encouraged to visit my office at other times, as I happen to be a busy person.</li>
 
 </ul>
 
@@ -258,6 +258,10 @@ After midsem:
 <a href="distrib2.html">Infinite support</a>
 </li>
 </ul>
+</li>
+
+<li>
+<a href="pgf.html">Probability generating functions and branching processes</a>
 </li>
 
 <li>
