--- a/prob1_2025/survival.html
+++ b/prob1_2025/survival.html
@@ -160,6 +160,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#How to cope with study problems">How to cope with study problems</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#What's wrong with notes taken by others?">What's wrong with notes taken by others?</a>
+</li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#How to cope with teachers">How to cope with teachers</a>
 </li>
@@ -279,6 +282,19 @@ questions to ask your teachers instead of a confused request like
 "Could not follow anything for the last month, please help!".
 <p></p>
 
+<h3><a
+name="What's wrong with notes taken by others?">What's wrong with notes taken by others?</a></h3>
+Taking notes in the class is not easy, and may look like a wastage of time when, after all, there are smart philanthropic
+ class mates who are willing to share their notes with you. Indeed, some great souls use their iPads and tablets to write
+ elaborate notes and even upload them to online platforms like Trello. Also, for some courses (like this one), the instructor
+ provides online notes. So why bother to take your own notes, especially when you can use that
+ time to check your social media? Well, if you feel that way, then imagine this scenario: You are
+ lost in a big city. Completely clueless where you are. No GPS connection. You pray to God for help, and God drops a
+ detailed road map of the city right before you. You look at it, zillions of roads crisscrossing
+ each other. Only the major roads are labelled with names, the myriad others are just jumble of
+ lines. And you have no clue <i>where you are   in this map</i>. Will this map be of any use? No! Well, your smart class
+ mate's online notes are like that. Now imagine God drops another map, a very rough crude map, but with a clear arrow marking
+ where you are right now. Will this help you more? Yes, certainly! Well, that's like the notes you maintain.
 <h2><a
 name="How to cope with teachers">How to cope with teachers</a></h2> 
 
