--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -193,12 +193,16 @@ This is the class webpage for Probability Theory I
 
 <table align="right" width="50%">
 <tr>
-<td><b>Notice board</b></td>
+<td><b>Notice
+board</b></td>
 </tr>
 <tr>
 <td>
 <iframe src="news.html"></iframe>
 </td>
+</tr>
+<tr>
+<td><font size="-1">Whenever I update anything in the class webpage, I shall mention it in the notice board.</font></td>
 </tr>
 </table>
 
@@ -316,6 +320,10 @@ intuition. We shall borrow some of these examples.</li>
 solutions</b> by <i>Frederick Mosteller</i>
 </li>
 
+<li>
+<b>A Course in Applied Stochastic Processes</b>  by <i>A Goswami and B V Rao</i>: We shall
+ borrow only the discussion of branching processes from this book.</li>
+
 </ul>
 
 <h2><a
@@ -342,12 +350,6 @@ variables.
 Expectation/mean,
 functions  of  discrete  random  
 variables,  
-<p></p>
-
-<p></p>
-
-<b>After midsem:</b>
-
 <p></p>
  Variance,  moments,  
 moment  generating functions
