--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -243,7 +243,7 @@ the conditioning random variable.
 
 <h2><a
 name="Unconditionals in terms of conditionals">Unconditionals in terms of conditionals</a></h2>
-Remember the throm of total probability: 
+Remember the theorem of total probability: 
 $$
 P(A) = P(B) P(A|B) + P(B^c)P(A|B^c),
 $$
@@ -881,7 +881,6 @@ ways. Here $j$  denotes the number of B's in the red part. Once we also count th
 $$\sum_{j=0}^{i-1} \binom{i+j-1}{j}\binom{2n-i-j}{n-j}.$$
 Now you should be able to complete the rest.     
 <p></p>
-[Thanks to Arnab Nayak for correcting a typo.]
 </div></p>
 
 <hr>
