--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
 <ul>
 <li>
@@ -801,7 +801,6 @@ Expected number of days of the year which are  birthdays of exactly $k$  people 
 <p></p>
 Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\right)^n - \frac{n\times 364^{n-1}}{365^n}\right\}.$
 <p></p>
-[Corrected a typo thanks to Ahan Mukherjee.]
 </div></p>
 
 </p>
