--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,6 +2,9 @@
 <body>
 <dl>
 
+<dt><b>July 25, 2025:</b></dt>
+<dd>Animation added for <a href="pgf.html" target="naya">branching processes</a>.</dd>
+
 <dt><b>July 21, 2025:</b></dt>
 <dd>Classes start.</dd>
 
