"animation for branching"

--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -147,7 +147,7 @@ function myFunction() {
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
 <link
-rel="stylesheet" href="branch.css">Dummy</link></head><body>
+rel="stylesheet" href="branch.css"></link></head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
