"minor typo fix"

--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -351,7 +351,8 @@ Clearly, since $\xi(t)$  is a continuous function, $\theta = \xi(\theta)$. In ot
 
 <h3><a
 name="Exploring fixed points">Exploring fixed points</a></h3>
-How many fixed points can $\xi(t) $ have. Surely $1$  is one, since $\xi(1) = 1$. If it is the only one, then
+How many fixed points can $\xi(t) $ have? Surely $1$  is a fixed point, since $\xi(1) = 1$. If
+ it is the only one, then
  $\theta$  must be $1$.
 <p></p>
 
