--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -184,7 +184,8 @@ rel="stylesheet" href="branch.css"></link></head><body>
 name="Probability Generating Function (PGF)">Probability Generating Function (PGF)</a></h1>
 
 <fieldset>
-<legend><b>Definition: </b></legend>Let a random variable take only nonnegative integer values. Then its <b><font color="red" size="40">probability
+<legend><b>Definition: Probability generating function (PGF)</b></legend>Let a random variable $X$  take only nonnegative integer values. Then
+ its <b><font color="red" size="40">probability
  generating function (PGF)</font></b>  is defined as the power series
 $$p(t) = p_0 + p_1 t + p_2 t^2 +\cdots, $$
 where $p_k = P(X=k)$  for $k=0,1,2,..$.
