--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -3,7 +3,11 @@
 <dl>
 
 <dt><b>July 25, 2025:</b></dt>
-<dd>Animation added for <a href="pgf.html" target="naya">branching processes</a>.</dd>
+<dd><ul>
+<li>Animation added for <a href="pgf.html" target="naya">branching processes</a>.</li>
+<li>Exercises added for PGF in the same page.</li>
+</ul>
+</dd>
 
 <dt><b>July 21, 2025:</b></dt>
 <dd>Classes start.</dd>
