--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -220,12 +220,22 @@ Any PGF $p(t)$  must converge absolutely for $|t|\leq 1$.
 
 <p></p>
 
+<p>
+<b>EXERCISE 2:</b>&nbsp;Think of a case where the radius of convergence is $\infty$.</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 3:</b>&nbsp;Think of a case where the radius of convergence is $1$.</p>
+
+<p></p>
+
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>A power series can be differentiated term by term any number of times in the interior of its
  interval of convergence.</fieldset>
 <p>
-<b><i>Proof:</i></b>Standard theorem from real analysis<b><i>[QED]</i></b>
-</p>.
+<b><i>Proof:</i></b>Standard theorem from real analysis.<b><i>[QED]</i></b>
+</p>
 Thanks to this theorem, 
 we can recover the probabilities from the PGF by repeated differentiation at $t=0$:
 $$p_n = \frac{p^{(n)}(0)}{n!}$$.
@@ -239,19 +249,19 @@ If $X$  are $Y$  are two random variables both taking only nonnegative integer v
 <p></p>
 
 <p>
-<b>EXERCISE 2:</b>&nbsp;Show that for $n\in{\mathbb N}$  we have
+<b>EXERCISE 4:</b>&nbsp;Show that for $n\in{\mathbb N}$  we have
 $$E(X(X-1)\cdots (X-n+1)) = p^{(n)}(1)$$.
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;Show that $E(t^X) = p(t)$.</p>
+<b>EXERCISE 5:</b>&nbsp;Show that $E(t^X) = p(t)$.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 4:</b>&nbsp;Show that if $X,Y$  are independent random variables taking nonnegative integer values,
+<b>EXERCISE 6:</b>&nbsp;Show that if $X,Y$  are independent random variables taking nonnegative integer values,
  with PGFs $\xi(t)$  and $\psi(t)$, then the PGF of $X+Y$  is
  $\xi(t)\psi(t)$.<p><a
 href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
@@ -335,12 +345,12 @@ name="Using PGF">Using PGF</a></h3>
 Let $\xi(t)$  be the PGF of $X_1$. In other words, 
 $$\xi(t) = p_0+p_1t+p_2t^2+\cdots.$$
 <p>
-<b>EXERCISE 5:</b>&nbsp;Show that $X_2 $ has PGF $\xi_2(t)=\xi(\xi(t))$.</p>
+<b>EXERCISE 7:</b>&nbsp;Show that $X_2 $ has PGF $\xi_2(t)=\xi(\xi(t))$.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;In general show that for $n\in{\mathbb N}$  the PGF of $X_n$  is $\xi_n(t) = \xi(\xi_{n-1}(t))$.</p>
+<b>EXERCISE 8:</b>&nbsp;In general show that for $n\in{\mathbb N}$  the PGF of $X_n$  is $\xi_n(t) = \xi(\xi_{n-1}(t))$.</p>
 
 <p></p>
 Now $P(X_n=0) = \xi_n(0)$. 
@@ -359,7 +369,7 @@ How many fixed points can $\xi(t) $ have? Surely $1$  is a fixed point, since $\
 <p></p>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;Show that in the simple cases discussed earlier $1$  is the only fixed point.</p>
+<b>EXERCISE 9:</b>&nbsp;Show that in the simple cases discussed earlier $1$  is the only fixed point.</p>
 
 <p></p>
 Notice that $\xi'(t)$  is always nonnegative. In fact, except in the trivial case of
@@ -391,12 +401,12 @@ The answer is $\theta$  will always be the <i>smallest</i>  fixed point. This fo
 <p></p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;Let $\mu$  be any fixed point of $\xi(t)$. Then show that $\forall n\in{\mathbb N}~~\xi_n(0)\leq \mu$.</p>
+<b>EXERCISE 10:</b>&nbsp;Let $\mu$  be any fixed point of $\xi(t)$. Then show that $\forall n\in{\mathbb N}~~\xi_n(0)\leq \mu$.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Use the last exercise to show that $\theta$  must be $\leq$  all fixed points of $\xi(t)$.</p>
+<b>EXERCISE 11:</b>&nbsp;Use the last exercise to show that $\theta$  must be $\leq$  all fixed points of $\xi(t)$.</p>
 
 <p></p>
 
