--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Basic concepts</h3>
 <ul>
 <li>
 <a href="#Basic concepts">Basic concepts</a>
@@ -189,8 +189,10 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+
+<title xmlns="">Basic concepts</title>
 $\newcommand{\ev}{{\mathcal F}}$
-<h1 xmlns=""><a
+<h1><a
 name="Basic concepts">Basic concepts</a></h1>
 A <b>random experiment</b> is an activity whose outcome we cannot
 predict. The set of all outcomes is called its <b>sample space</b>. Each
@@ -806,7 +808,9 @@ The simplest special case is when the sample space $\Omega$ is finite
 In this case, for any $A\subseteq \Omega$ we have $P(A) =|A|/|\Omega|.$
 <p></p>
 Many interesting problems fall in this category. They are
-basically problems of combinatorics. One type of problem is
+basically problems of combinatorics. 
+<p></p>
+One type of problem is
 <i>occupancy problems</i>, where we have some boxes and some
 balls are distributed over them following various
 conditions. 
@@ -917,6 +921,24 @@ configurations are assumed equally likely.</li>
 <p></p>
 Next we discuss a type of problems that are used in statistical
 quality control. 
+In this connection, you should know about a few terms:
+<ul>
+<li>
+<b>Simple random sample (SRS):</b>  Suppose that you have a finite set (called a <b><font color="red" size="40">population</font></b>), and you draw one
+ element from it at random (giving equality probability to each). This is called simple random sampling. </li>
+
+<li>
+<b>Simple random sample without replacement(SRSWOR):</b>  Again you start with a finite population (of size $n$),
+ and draw a bunch of $r$  elements from it at random (giving all the $\binom nr$ 
+ samples equal chance). This is called an SRSWOR. </li>
+
+<li>
+<b>Simple random sample with replacement(SRSWR):</b>  Again you start with a finite population (of size $n$),
+ and draw a single elements from it using simple random sampling. You make a note of the element, and return it to the opulation.
+ You repeat this $r$  times. This is called an SRSWOR. </li>
+
+</ul>
+
 <p></p>
 
 <p>
@@ -1800,11 +1822,22 @@ $1-\frac{(365)_n}{365^n}.$</div></p>
 
 <p></p>
 
+<p>
+<b>EXERCISE 32:</b>&nbsp;A cereal company is giving a free ball with every box. The ball is either red or green or
+ blue or yellow, each being equally likely. A buyer has bought $10$  boxes. What is the probability that (s)he has a
+at least one ball of each colour?
+<p><a
+href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
+class="ans" id="lab27">Let $A_1, A_2, A_3, A_4$  denote the events that (s)he has at least one
+ red/green/blue/yellow ball, respectively.  Then you need to find $P(A_1\cup A_2\cup A_3\cup
+ A_4)$. Use inclusion-exclusion.  </div></p>
+</p>
+
 <h3><a
 name="Harder">Harder</a></h3>
 
 <p>
-<b>EXERCISE 32:</b>&nbsp;A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
+<b>EXERCISE 33:</b>&nbsp;A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
 A news is spreading as rumour in this town as follows. Initially,
 only $p_1$  knows the news. He communicates the news to
  one of the
@@ -1815,8 +1848,8 @@ rumour spreads $r$ times without returning to $p_1.$
 Also, find the probability that the rumour spreads $r$ times
 without being repeated to any person.
  <p><a
-href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
-class="ans" id="lab27">Total number of outcomes is $n^r.$ In the first part
+href="javascript:hideShow('lab28')"><b>[Hint]</b></a><div
+class="ans" id="lab28">Total number of outcomes is $n^r.$ In the first part
 the total number of favourable outcomes is $n(n-1)^{r-1}.$ So
 the probability is $\left(1-\frac 1n\right)^{r-1}.$ In the second
 case the number of favourable outcomes
@@ -1827,7 +1860,7 @@ is $n(n-1)(n-2)\cdots(n-r+1).$ So the probability is
 <p></p>
 
 <p>
-<b>EXERCISE 33:</b>&nbsp;<center>
+<b>EXERCISE 34:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most1.png"></th>
@@ -1838,8 +1871,8 @@ is $n(n-1)(n-2)\cdots(n-r+1).$ So the probability is
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab28')"><b>[Hint]</b></a><div
-class="ans" id="lab28">Let the drawer have $r$ red and $b$ black
+href="javascript:hideShow('lab29')"><b>[Hint]</b></a><div
+class="ans" id="lab29">Let the drawer have $r$ red and $b$ black
 socks. Then we have
 <p></p>
 $$
@@ -1854,7 +1887,7 @@ even $b$ it is $r=15,$ $b=6.$</div></p>
 <p></p>
 
 <p>
-<b>EXERCISE 34:</b>&nbsp;<center>
+<b>EXERCISE 35:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most8.png"></th>
@@ -1865,15 +1898,15 @@ even $b$ it is $r=15,$ $b=6.$</div></p>
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab29')"><b>[Hint]</b></a><div
-class="ans" id="lab29">$\frac{13!}{52!}\approx 10^{-60}.$
+href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
+class="ans" id="lab30">$\frac{13!}{52!}\approx 10^{-60}.$
 </div></p>
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 35:</b>&nbsp;<center>
+<b>EXERCISE 36:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most19.png"></th>
@@ -1884,8 +1917,8 @@ class="ans" id="lab29">$\frac{13!}{52!}\approx 10^{-60}.$
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
-class="ans" id="lab30">First experiment:$1-(\frac 56)^6\approx 0.67.$
+href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
+class="ans" id="lab31">First experiment:$1-(\frac 56)^6\approx 0.67.$
 <p></p>
 Second experiment:$1-\left(\frac 56\right)^{12} -
 12\times\frac 16\left(\frac 56\right)^{11} \approx 0.62.$
@@ -1899,7 +1932,7 @@ Third experiment:$1-\left(\frac 56\right)^{18} -
 <p></p>
 
 <p>
-<b>EXERCISE 36:</b>&nbsp;<center>
+<b>EXERCISE 37:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most27.png"></th>
@@ -1910,8 +1943,8 @@ Third experiment:$1-\left(\frac 56\right)^{18} -
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
-class="ans" id="lab31">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\approx
+href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
+class="ans" id="lab32">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\approx
 0.37.$
 <p></p>
 (b) $\left(1-\frac 1n\right)^n.$</div></p>
@@ -1920,7 +1953,7 @@ class="ans" id="lab31">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\a
 <p></p>
 
 <p>
-<b>EXERCISE 37:</b>&nbsp;<center>
+<b>EXERCISE 38:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most28.png"></th>
@@ -1931,12 +1964,12 @@ class="ans" id="lab31">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\a
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
-class="ans" id="lab32">${n\choose r}\left(\frac mn\right)^r\left(1-\frac mn\right)^{n-r}.$</div></p>
+href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
+class="ans" id="lab33">${n\choose r}\left(\frac mn\right)^r\left(1-\frac mn\right)^{n-r}.$</div></p>
 </p>
 
 <p>
-<b>EXERCISE 38:</b>&nbsp;<center>
+<b>EXERCISE 39:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most31.png"></th>
@@ -1947,8 +1980,8 @@ class="ans" id="lab32">${n\choose r}\left(\frac mn\right)^r\left(1-\frac mn\righ
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
-class="ans" id="lab33">$1-\frac{(365)_n}{365^n}&gt;\frac 12.$ Here are some values:
+href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
+class="ans" id="lab34">$1-\frac{(365)_n}{365^n}&gt;\frac 12.$ Here are some values:
 <center>
 <table style="" border="1">
 
@@ -1969,7 +2002,7 @@ The answer is 23.
 <p></p>
 
 <p>
-<b>EXERCISE 39:</b>&nbsp;<center>
+<b>EXERCISE 40:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most32.png"></th>
@@ -1980,8 +2013,8 @@ The answer is 23.
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
-class="ans" id="lab34">If I ask $n$ persons, then the probability
+href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
+class="ans" id="lab35">If I ask $n$ persons, then the probability
 is $1-\left(\frac{364}{365}\right)^n.$ I want this to
 be $&gt;\frac 12.$
 So $\left(\frac{364}{365}\right)^n &lt; \frac 12,$ or $n\geq 253.$
@@ -1991,15 +2024,15 @@ So $\left(\frac{364}{365}\right)^n &lt; \frac 12,$ or $n\geq 253.$
 <p></p>
 
 <p>
-<b>EXERCISE 40:</b>&nbsp;Let $A_1,A_2,A_3$ be three events. Let $p_1 = \sum
+<b>EXERCISE 41:</b>&nbsp;Let $A_1,A_2,A_3$ be three events. Let $p_1 = \sum
 P(A_i)$ and $p_2 = \sum_{i&lt; j} P(A_i\cap A_j)$ and $p_3 = P(A_1\cap A_2\cap A_3).$
 Find (in terms of $p_i$'s) the probability that exactly one of the
 events $A_1,A_2,A_3$ has occurred. Generalise to $n$
 events. Also find (and prove) a formula (in terms of
 the $p_i$'s) for the probability that exactly $r$ of
 the $n$ events has occurred.<p><a
-href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
-class="ans" id="lab35">Probability that exactly one event of $A_1,A_2,A_3$ has
+href="javascript:hideShow('lab36')"><b>[Hint]</b></a><div
+class="ans" id="lab36">Probability that exactly one event of $A_1,A_2,A_3$ has
 occurred is $p_1-2p_2+3p_3.$ For $n$ events it will be 
 $\sum_{i=1}^n (-1)^{i-1} ip_i.$ For exactly $r$ out
 of $n$ events:
