--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,6 +2,10 @@
 <body>
 <dl>
 
+<dt><b>July 28, 2025:</b></dt>
+<dd>New exercise and discussion added to the <a href="basic.html"
+target="naya">basic concepts</a> page.</dd>
+
 <dt><b>July 25, 2025:</b></dt>
 <dd><ul>
 <li>Animation added for <a href="pgf.html" target="naya">branching processes</a>.</li>
